# e-bpm

bpm-backend/: .gitignore  env.py  pyproject.toml
bpm-backend/alembic/: env.py
bpm-backend/alembic/versions/: 7303b1e1aadf_criação_inicial_das_tabelas.py
bpm-backend/app/: cli.py  main.py
bpm-backend/app/api/: processes.py  users.py
bpm-backend/app/auth/: routes.py
bpm-backend/app/core/: config.py
bpm-backend/app/db/: database.py  models.py  schemas.py
bpm-backend/app/security/: deps.py  security.py
bpm-backend/app/utils/: permissions.py
bpm-frontend/: package-lock.json
bpm-frontend/src/app/: page.tsx
bpm-frontend/src/components/js/: AppAppBar.js  Footer.js
